1999-01-07  Nat Friedman  <nat@nat.org>

	* gnome-app-helper.h (GNOMEUIINFO_MENU_OPTIONS_TREE): New standard
 	menu.

Wed Jan 06 21:36:16 1999  George Lebl  <jirka@5z.com>

	* gnome-uidefs.h,gnome-app-helper.h: added Find and Replace items
	  and default keybindings for those

1999-01-07  Jonathan Blandford  <jrb@redhat.com>

	* gnome-app.c (gnome_app_set_statusbar): okay -- lets try again.
	The old spacing wasn't liked so it's now down to 0 pixels.

Wed Jan 06 21:13:54 1999  George Lebl  <jirka@5z.com>

	* gnome-app-helper.h: Added strings for use in menu path
	  for inserting,deleting,mdi,etc..., and added a standard
	  "File_s" toplevel menu

1999-01-07  Nat Friedman  <nat@nat.org>

	* gnome-app-helper.h (GNOMEUIINFO_MENU_PRINT_ITEM): Corrected a
 	typo.
	(GNOMEUIINFO_MENU_ABOUT_ITEM): Another typo.

1999-01-06  Nat Friedman  <nat@nat.org>

	* gnome-uidefs.h
 	(GNOME_KEY_NAME_PRINT), (GNOME_KEY_MOD_PRINT_SETUP): Added
 	standard hotkeys for printing.

	* gnome-app-helper.h (GNOMEUIINFO_MENU_PRINT_ITEM),
	(GNOMEUIINFO_MENU_PRINT_SETUP_ITEM): Use the new standard hotkeys.

1999-01-06  Nat Friedman  <nat@nat.org>

	* gnome-app-helper.h (GNOMEUIINFO_MENU_NEW_ITEM): Add another
 	parameter for the menu item description.
	(GNOMEUIINFO_MENU_UNDO_ITEM): Removed an extra parameter.

	Also changed "document" to "file" in all the menu item
 	descriptions.

1999-01-06  Nat Friedman  <nat@nat.org>

	* gnome-app-helper.h: Added the little tool-tips-like descriptions
 	of each standard menu item's function.  Cleaned the macros up a
 	bit and grouped them according to the menu in which they belong.

Wed Jan 06 18:03:59 1999  George Lebl  <jirka@5z.com>

	* gnome-app-helper.c: cast data to (gpointer) on the new macros,
	  and add a standard "_Print" and "Print S_etup..." items

Wed Jan 06 17:45:06 1999  George Lebl  <jirka@5z.com>

	* gnome-app-helper.h: changed the NEW_ITEM macros, as by the
	  syleguide they need to specify a type, so they need a custom
	  label passed
