@@ -1,5 +1,9 @@
 1999-01-07  Nat Friedman  <nat@nat.org>
 
+	* gnome-app-helper.h Added GNOME_MENU_OPTIONS_STRING and _PATH.
+	
+1999-01-07  Nat Friedman  <nat@nat.org>
+
 	* gnome-app-helper.h (GNOMEUIINFO_MENU_OPTIONS_TREE): New standard
  	menu.
 
